RESOLVED FIXED 195922
media/track/track-in-band-style.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=195922
Summary media/track/track-in-band-style.html is flaky
Chris Dumez
Reported 2019-03-18 16:56:58 PDT
media/track/track-in-band-style.html is flaky: Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/media/track/track-in-band-style-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/media/track/track-in-band-style-actual.txt @@ -14,6 +14,6 @@ ** Test current cue colors EXPECTED (getComputedStyle(cueDisplayElement).color == 'rgb(255, 255, 255)') OK -EXPECTED (getComputedStyle(cueNode).backgroundColor == 'rgb(0, 0, 0)') OK +EXPECTED (getComputedStyle(cueNode).backgroundColor == 'rgb(0, 0, 0)'), OBSERVED 'rgba(0, 0, 0, 0)' FAIL END OF TEST It started happening after https://trac.webkit.org/changeset/243094 although I bet this change merely impacted the timing.
Attachments
Patch (4.96 KB, patch)
2019-03-19 10:05 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-03-18 16:57:13 PDT
I can reproduce like so: run-webkit-tests -gf --repeat-each=100 media/track/track-in-band-style.html
Chris Dumez
Comment 2 2019-03-18 20:20:06 PDT
If I add logging to InbandTextTrackPrivateAVF::processCueAttributes() and run the test, I see that cueData.setForegroundColor(color) gets called with 'rgb(255, 255, 255)'. However, I never see any call to cueData.setBackgroundColor(color), no matter if the test passes or fail. Therefore, I am unsure where 'rgb(0, 0, 0)' and 'rgba(0, 0, 0, 0)' come from. Maybe some default values?
Chris Dumez
Comment 3 2019-03-18 20:34:36 PDT
It looks like Color().cssText() returns "rgba(0, 0, 0, 0)" so it would make sense for the background color to be rgba(0, 0, 0, 0) if it does not get set.
Chris Dumez
Comment 4 2019-03-19 08:41:38 PDT
(In reply to Chris Dumez from comment #3) > It looks like Color().cssText() returns "rgba(0, 0, 0, 0)" so it would make > sense for the background color to be rgba(0, 0, 0, 0) if it does not get set. Although I do not see the AV code setting the cue's backgroundColor, it does set the highlightColor. The highlightColor ends up being set as css background-color for the element.
Chris Dumez
Comment 5 2019-03-19 10:05:11 PDT
Eric Carlson
Comment 6 2019-03-19 12:45:06 PDT
Comment on attachment 365177 [details] Patch thanks cdumez!
Chris Dumez
Comment 7 2019-03-19 13:05:40 PDT
Comment on attachment 365177 [details] Patch Clearing flags on attachment: 365177 Committed r243164: <https://trac.webkit.org/changeset/243164>
Chris Dumez
Comment 8 2019-03-19 13:05:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-03-19 13:11:16 PDT
Alexey Proskuryakov
Comment 10 2019-03-19 15:08:12 PDT
We have a flaky timeout expectation for this test. I don't imagine this is likely to fix it, is it? LayoutTests/platform/mac/TestExpectations:1370:webkit.org/b/171465 media/track/track-in-band-style.html [ Pass Timeout ]
Chris Dumez
Comment 11 2019-03-19 15:10:33 PDT
(In reply to Alexey Proskuryakov from comment #10) > We have a flaky timeout expectation for this test. I don't imagine this is > likely to fix it, is it? > > LayoutTests/platform/mac/TestExpectations:1370:webkit.org/b/171465 > media/track/track-in-band-style.html [ Pass Timeout ] No sorry, I don't think my change would help address a timeout.
Note You need to log in before you can comment on or make changes to this bug.