media/track/track-in-band-style.html is flaky https://bugs.webkit.org/show_bug.cgi?id=195922

Reviewed by Eric Carlson.

Source/WebCore:

* platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp:
(WebCore::InbandTextTrackPrivateAVF::processCueAttributes):
Small optimization: some of the if checks were missing their "continue;"
statement. This would cause us to keep checking following keys even though
we already got a match.

LayoutTests:

* media/track/track-in-band-style-expected.txt:
* media/track/track-in-band-style.html:
- Check element.style instead of getComputedStyle(element) to get the
  CSS colors as this seems more reliable.
- For the foreground text color, check cueNode.style.color instead of
  cueDisplayElement given that the implementation sets the CSS attribute
  on the cueNode, not the cueDisplayElement.

Canonical link: https://commits.webkit.org/210233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243164 268f45cc-cd09-0410-ab3c-d52691b4dbfc